FIX: npm errors

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,14 @@
 {
   "name": "backend-e-commerce",
+  "description": "",
+  "version": "1.0.0",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "scripts": {
+    "dev": "nodemon src/index.js"
+  },
   "dependencies": {
     "express": "4.17.1"
   },
