--- a/backend/package.json
+++ b/backend/package.json
@@ -7,12 +7,28 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "start": "cross-env NODE_ENV=production node dist/index.js",
+    "build": "cross-env NODE_ENV=production babel src --out-dir dist",
+    "dev": "cross-env NODE_ENV=development nodemon src/index.js --exec babel-node"
   },
   "dependencies": {
-    "express": "4.17.1"
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
+    "dotenv": "^10.0.0",
+    "express": "4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.13.2",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.14.5",
+    "@babel/core": "^7.14.6",
+    "@babel/node": "^7.14.7",
+    "@babel/preset-env": "^7.14.7",
+    "eslint": "^7.30.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.23.4",
     "nodemon": "2.0.12"
   }
 }
