--- a/backend/package.json
+++ b/backend/package.json
@@ -30,5 +30,6 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.4",
     "nodemon": "2.0.12"
-  }
+  },
+  "eslintIgnore": ["dist/", "node_modules/"]
 }
