--- a/backend/package.json
+++ b/backend/package.json
@@ -8,8 +8,9 @@
   "license": "ISC",
   "scripts": {
     "start": "cross-env NODE_ENV=production node dist/index.js",
-    "build": "cross-env NODE_ENV=production babel src --out-dir dist",
-    "dev": "cross-env NODE_ENV=development nodemon src/index.js --exec babel-node"
+    "build": "cross-env NODE_ENV=production babel src --out-dir dist && npm run copy",
+    "dev": "cross-env NODE_ENV=development nodemon src/index.js --exec babel-node",
+    "copy": "copyfiles --up 1 src/public/* dist"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -26,10 +27,14 @@
     "@babel/core": "^7.14.6",
     "@babel/node": "^7.14.7",
     "@babel/preset-env": "^7.14.7",
+    "copyfiles": "^2.4.1",
     "eslint": "^7.30.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.4",
     "nodemon": "2.0.12"
   },
-  "eslintIgnore": ["dist/", "node_modules/"]
+  "eslintIgnore": [
+    "dist/",
+    "node_modules/"
+  ]
 }
