--- a/backend/package.json
+++ b/backend/package.json
@@ -13,24 +13,26 @@
     "copy": "copyfiles --up 1 src/public/* dist"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "cross-env": "^7.0.3",
-    "dotenv": "^10.0.0",
+    "bcryptjs": "2.4.3",
+    "core-js": "3.16.0",
+    "cors": "2.8.5",
+    "cross-env": "7.0.3",
+    "dotenv": "10.0.0",
     "express": "4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.2",
-    "morgan": "^1.10.0"
+    "jsonwebtoken": "8.5.1",
+    "mongoose": "5.13.2",
+    "morgan": "1.10.0",
+    "regenerator-runtime": "0.13.9"
   },
   "devDependencies": {
-    "@babel/cli": "^7.14.5",
-    "@babel/core": "^7.14.6",
-    "@babel/node": "^7.14.7",
-    "@babel/preset-env": "^7.14.7",
-    "copyfiles": "^2.4.1",
-    "eslint": "^7.30.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.23.4",
+    "@babel/cli": "7.14.5",
+    "@babel/core": "7.14.6",
+    "@babel/node": "7.14.7",
+    "@babel/preset-env": "7.14.7",
+    "copyfiles": "2.4.1",
+    "eslint": "7.30.0",
+    "eslint-config-airbnb-base": "14.2.1",
+    "eslint-plugin-import": "2.23.4",
     "nodemon": "2.0.12"
   },
   "eslintIgnore": [
