--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "12.1.2",
     "@angular/router": "12.1.2",
     "rxjs": "6.6.0",
+    "sweetalert2": "^11.1.3",
     "tslib": "2.3.0",
     "zone.js": "0.11.4"
   },
